# sitcom-simulator

./: .env.example  .gitignore  LICENSE  README.md  backend_server.py  config.toml  create_sitcom.py  cron.sh  example.env  example_script_zelda.toml  exampledb.sqlite3  main.py  pyproject.toml  requirements.txt  sample_script.toml  sitcomcli.sqlite3
.github/workflows/: docs.yml  python-publish.yml
characters/: characters.toml
docs/: api.rst  conf.py  index.rst  installation.rst  llm_instructions.rst  overview.rst  requirements.txt  usage.rst
frontend/: about.html  index.html  view-sitcoms.html
generator/: image_generator.py  models.py  movie_generator.py  music_generator.py  script_generator.py  tts_generator.py  user_input.py
generators/: audiogenerator.py  imagegenerator.py  moviegenerator.py  scriptgenerator.py
scripts/: example_basic.toml  example_mario.toml  example_script_mario.toml  example_script_minimal.toml  example_script_zelda.toml
sitcom_simulator/: __init__.py  auto.py  cli.py  models.py  sitcom_creator.py  user_input.py
sitcom_simulator/image/: image_generator.py
sitcom_simulator/image_generator/: __init__.py  image_generator.py
sitcom_simulator/music/: __init__.py  music_generator.py
sitcom_simulator/music_generator/: __init__.py  music_generator.py
sitcom_simulator/script/: __init__.py  llm.py  llm_instructions.txt  metaprompt.txt  script_generator.py
sitcom_simulator/speech/: __init__.py  (+1 more)
social/: uploader.py  yt_uploader.py
stability_sdk/: client.py
utils/: argparser.py  fakeyou.py  toml.py  userinput.py  yt_uploader.py
(+41 files in other folders)
